--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 <header>
     <div style="display: flex; align-items: center;">
-        <a href="index.html"><img class="logo" src="imagens/logo.png" alt="erro"></a>
+        <a href="index.html"><img class="logo" src="logo.png" alt="erro"></a>
         
     </div>
 
@@ -44,7 +44,7 @@
         <div class="Produto">
             <div class="container">
                 <div class="overlay"></div>
-                <img src="imagens/papel-de-parede-estetico-prateado-com-corrente_23-2149871722.avif" alt="error na imagem de Corrente de Prata" class="image">
+                <img src="papel-de-parede-estetico-prateado-com-corrente_23-2149871722.avif" alt="error na imagem de Corrente de Prata" class="image">
             </div>
 
             <h3><b>CORRENTE GRUMET</b></h3>
@@ -55,7 +55,7 @@
         <div class="Produto">
             <div class="container">
                 <div class="overlay"></div>
-                <img src="imagens/Produto2.jpg"
+                <img src="Produto2.jpg"
                     alt="error na imagem" class="image">
             </div>
 
@@ -67,7 +67,7 @@
         <div class="Produto">
             <div class="container">
                 <div class="overlay"></div>
-                <img src="imagens/camiseta.png" alt="Error na Imagem" class="image">
+                <img src="camiseta.png" alt="Error na Imagem" class="image">
                 </div>
             <h3><b>Camiseta Cor Verde</b></h3>
             <p>R$ 89,90</p>
