--- a/login.html
+++ b/login.html
@@ -8,7 +8,7 @@
 </head>
 <body>
         <header id="navcarrinho">
-                <a href="index.html"><img class="logo" src="imagens/logo.png" alt="erro"></a>
+                <a href="index.html"><img class="logo" src="logo.png" alt="erro"></a>
             </header>
 <main class="container">
     <form>
