--- a/produto1.html
+++ b/produto1.html
@@ -9,7 +9,7 @@
 
 <body>
     <header>  
-        <a href="index.html"><img src="imagens/logo.png" alt="Erro na Logo"></a>
+        <a href="index.html"><img src="logo.png" alt="Erro na Logo"></a>
         <a href="Carrinho.html"><button id="cart-btn">🛒 Carrinho (<span id="cart-count">0</span>)</button></a>
        </header>
     <h2 style="text-align:center;">Descrição do Produto:
