--- a/produto2.html
+++ b/produto2.html
@@ -9,7 +9,7 @@
 
 <body>
     <header>  
-        <a href="index.html"><img src="imagens/logo.png" alt="Erro na Logo"></a>
+        <a href="index.html"><img src="logo.png" alt="Erro na Logo"></a>
         <a href="Carrinho.html"><button id="cart-btn">🛒 Carrinho (<span id="cart-count">0</span>)</button></a>
        </header>
     <h2 style="text-align:center;">Descrição do Produto:
@@ -24,7 +24,7 @@
         </div>
         <p><b>Tênis Nike | Tênis Nike Revolution 7 Masculino - Preto e Branco</b></p>
         <p>R$ 119,90</p>
-        <button class="buy-btn" onclick="adicionarAoCarrinho('Tênis Nike | Tamanho 41', 'R$ 119,90', 'imagens/Produto2.jpg')">
+        <button class="buy-btn" onclick="adicionarAoCarrinho('Tênis Nike | Tamanho 41', 'R$ 119,90', 'Produto2.jpg')">
             Comprar
         </button>
     </div>
