--- a/produto3.html
+++ b/produto3.html
@@ -9,7 +9,7 @@
 
 <body>
     <header>  
-        <a href="index.html"><img src="imagens/logo.png" alt="Erro na Logo"></a>
+        <a href="index.html"><img src="logo.png" alt="Erro na Logo"></a>
         <a href="Carrinho.html"><button id="cart-btn">🛒 Carrinho (<span id="cart-count">0</span>)</button></a>
        </header>
      <h2 style="text-align:center;">Descrição do Produto:
@@ -25,7 +25,7 @@
         </div>
         <p><b>Camiseta Premium Verde Militar Sem Estampa </b></p>
         <p>R$ 89,90</p>
-    <button class="buy-btn" onclick="adicionarAoCarrinho('Camiseta Cor Verde | Tamanho GG', 'R$ 89,90', 'imagens/camiseta.png')">
+    <button class="buy-btn" onclick="adicionarAoCarrinho('Camiseta Cor Verde | Tamanho GG', 'R$ 89,90', 'camiseta.png')">
         Comprar
     </button>
     </div>
