--- a/Contato.html
+++ b/Contato.html
@@ -10,7 +10,7 @@
 </head>
 <body>
                 <header class="header-contato">
-                        <a href="index.html"><img class="logo" src="imagens/logo.png" alt="Logo"></a>
+                        <a href="index.html"><img class="logo" src="logo.png" alt="Logo"></a>
                         <h1 class="titulo-contato">Contato</h1>
                       </header>
 
