--- a/Carrinho.html
+++ b/Carrinho.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header id="navcarrinho">
-        <a href="index.html"><img class="logo" src="imagens/logo.png" alt="erro"></a>
+        <a href="index.html"><img class="logo" src="logo.png" alt="erro"></a>
             <h1 id="Tcarrinho">Carrinho</h1>
     </header>
     <section class="produtos" id="carrinho-itens"></section>
