--- a/Cadastrar.html
+++ b/Cadastrar.html
@@ -10,7 +10,7 @@
 
 <body>
         <header id="navcarrinho">
-                <a href="index.html"><img class="logo" src="imagens/logo.png" alt="erro"></a>
+                <a href="index.html"><img class="logo" src="logo.png" alt="erro"></a>
             </header>
 
     <main class="container">
